--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,9 @@
     }
   },
   "require": {
-    "slick/common": "^1.1"
+    "slick/common": "^1.1",
+    "slick/validator": "^1.1",
+    "slick/filter": "^1.1"
   },
   "require-dev": {
     "phpunit/phpunit": "4.*",
