--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
   "require": {
     "slick/common": "^1.1",
     "slick/validator": "^1.1",
-    "slick/filter": "^1.1"
+    "slick/filter": "^1.1",
+    "slick/http": "^1.2"
   },
   "require-dev": {
     "phpunit/phpunit": "4.*",
