--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     "slick/common": "^1.1",
     "slick/validator": "^1.1",
     "slick/filter": "^1.1",
-    "slick/http": "^1.2"
+    "slick/http": "^1.2",
+    "symfony/yaml": "~2.1"
   },
   "require-dev": {
     "phpunit/phpunit": "4.*",
