Added form registry factory

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
     "slick/filter": "^1.1",
     "slick/http": "^1.2",
     "symfony/yaml": "~2.1",
-    "slick/template": "^1.2"
+    "slick/template": "^1.2",
+    "league/event": "^2.1"
   },
   "require-dev": {
     "phpunit/phpunit": "4.*",
