Added wasSubmitted method to form interface. Fixed the value for rendering file inputs after a submit. Form now checks if its submitted and at that time it will retrieve the data from request so that it can be validated, simplifying the submition/validation on forms.

--- a/tests/forms/full-form.yml
+++ b/tests/forms/full-form.yml
@@ -3,6 +3,8 @@ elements:
   profileId:
     type: hidden
     value: 123456
+    filters:
+      - Slick\Form\Input\Filter\Integer
   name:
     type: text
     label: Full name
@@ -17,7 +19,9 @@ elements:
     label: Profile picture
   public:
     type: checkbox
-    label: Make my profile public
+    label: Make my profile public,
+    filters:
+      - Slick\Form\Input\Filter\Boolean
   addressSet:
     type: fieldset
     value: Address
