--- a/tests/forms/full-form.yml
+++ b/tests/forms/full-form.yml
@@ -36,7 +36,7 @@ elements:
         label: Gender
         required: yes
         options:
-          "-": -- Select one --
+          "-": "-- Select one --"
           M: Male
           F: Female
         validates:
