Added multiple context to input validation
In the form definition file you may send various context values to a validator along with the message. The first element in the context array is always the input. Other context will follow.
Added alias names for validUpload, requiredUpload, integer and boolean validators/filters.

--- a/tests/forms/full-form.yml
+++ b/tests/forms/full-form.yml
@@ -4,7 +4,7 @@ elements:
     type: hidden
     value: 123456
     filters:
-      - Slick\Form\Input\Filter\Integer
+      - integer
   name:
     type: text
     label: Full name
@@ -17,11 +17,14 @@ elements:
   picture:
     type: file
     label: Profile picture
+    validates:
+      requiredUpload: Profile picture is needed.
+      validUpload: Error uploading file. %s
   public:
     type: checkbox
     label: Make my profile public,
     filters:
-      - Slick\Form\Input\Filter\Boolean
+      - boolean
   addressSet:
     type: fieldset
     value: Address
