--- a/tests/forms/test.yml
+++ b/tests/forms/test.yml
@@ -1,8 +1,25 @@
 id: login-form
 elements:
-    username:
-        type: text
-        label: Username
-    password:
-        type: password
-        label: Password
+  username:
+    type: text
+    label: Username
+    validates:
+      notEmpty: Username cannot be empty
+    filters:
+      - text
+  password:
+    type: password
+    label: Password
+    validates:
+      notEmpty: Password cannot be empty
+  remember:
+      type: checkbox
+      label: Remember me on this computer
+  buttonGroup:
+    type: fieldset
+    elements:
+      submit:
+        type: submit
+        value: Sign in
+        attributes:
+          class: btn btn-primary
