Fixed typos in the tests form

--- a/tests/forms/full-form.yml
+++ b/tests/forms/full-form.yml
@@ -43,7 +43,7 @@ elements:
           M: Male
           F: Female
         validates:
-          Slick\Tests\Form\Validator\Gender: Please choose the propert option for your gender.
+          Slick\Tests\Form\Validator\Gender: Please choose the proper option for your gender.
   buttonGroup:
     type: fieldset
     elements:
