--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,8 @@
     }
   },
   "require": {
-    "slick/common": "^1.1",
-    "slick/validator": "^1.1",
+    "slick/common": "^1.2",
+    "slick/validator": "^1.2",
     "slick/filter": "^1.1",
     "slick/http": "^1.2",
     "symfony/yaml": "~2.1",
@@ -38,9 +38,10 @@
     "league/event": "^2.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.*",
+    "phpunit/phpunit": "^4",
+    "phpunit/php-code-coverage": "^2",
     "scrutinizer/ocular": "~1.1",
-    "behat/behat": "~3.0.4"
+    "behat/behat": "^3.0.4"
   },
   "extra": {
     "branch-alias": {
