Added support for Symfony/Yaml ^3.3

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     "slick/validator": "^1.2",
     "slick/filter": "^1.1",
     "slick/http": "^1.2",
-    "symfony/yaml": "~2.1",
+    "symfony/yaml": "^3.3",
     "slick/template": "^1.2",
     "slick/i18n": "^1.2",
     "league/event": "^2.1"
